[gd_scene load_steps=3 format=2]

[ext_resource path="res://lobby/client.gd" type="Script" id=1]
[ext_resource path="res://lobby/client_ui.gd" type="Script" id=2]

[node name="lobby-node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ChatScreen" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Chat" type="VBoxContainer" parent="ChatScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -790.0
margin_bottom = 1.0
rect_scale = Vector2( 1.031, 0.994872 )

[node name="Message" type="HBoxContainer" parent="ChatScreen/Chat"]
margin_right = 234.0
margin_bottom = 24.0

[node name="ChatTextSend" type="LineEdit" parent="ChatScreen/Chat/Message"]
margin_right = 187.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Enter some text to send..."

[node name="Send" type="Button" parent="ChatScreen/Chat/Message"]
margin_left = 191.0
margin_right = 234.0
margin_bottom = 24.0
text = "Send"

[node name="ChatArea" type="RichTextLabel" parent="ChatScreen/Chat"]
margin_top = 28.0
margin_right = 234.0
margin_bottom = 601.0
size_flags_vertical = 3

[node name="Disconnect" type="Button" parent="ChatScreen"]
margin_left = 4.0
margin_top = 576.0
margin_right = 238.0
margin_bottom = 596.0
rect_scale = Vector2( 1.00943, 1.1 )
toggle_mode = true
text = "Disconnect"

[node name="Client" type="Node" parent="."]
script = ExtResource( 1 )

[connection signal="pressed" from="ChatScreen/Chat/Message/Send" to="." method="_on_Send_pressed"]
[connection signal="pressed" from="ChatScreen/Disconnect" to="." method="_on_Disconnect_pressed_game"]
